@@ -8,6 +8,6 @@ Icon=spacefm
 StartupNotify=true
 Type=Application
 Terminal=false
-MimeType=x-directory/normal;inode/directory;
+MimeType=inode/directory;
 _GenericName=File Manager
 _Comment=Browse the file system
