@@ -1,6 +1,7 @@
 0.7.7+
     use/update mimeapps.list over defaults.list closes #71
     added design mode on mime apps opens editor menu
+    deprecated MimeType x-directory removed from spacefm desktop files
 0.7.7   2012-05-27:
     escape mount point in dev props scripts fixes #70
     fixed File|File Search keybinding
